Module 3 (sklearn) and some file names changed

--- a/Module 2 - Pandas/Hands_On_Pandas - For Class.ipynb
+++ b/Module 2 - Pandas/Hands_On_Pandas - For Class.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
          "type": "string"
         }
        ],
-       "ref": "614949a0-cf1a-4b53-8d53-e4f8651b6326",
+       "ref": "0223ae6f-3e4a-4eae-b30c-c9a1f6434d48",
        "rows": [
         [
          "0",
@@ -320,7 +320,7 @@
        "9  [Fresh Tomato Salsa, [Rice, Black Beans, Pinto...     $9.25   "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,6 +1204,27 @@
    ],
    "source": [
     "chipo.item_price.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$8.75 '"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check one of the elements from item_price column\n",
+    "chipo.iloc[-1,-1]"
    ]
   },
   {
