--- a/Module 2 - Pandas/Hands_On_Pandas_Analysis.ipynb
+++ b/Module 2 - Pandas/Hands_On_Pandas_Analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,11 +52,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "order_id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "quantity",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "item_name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "choice_description",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "item_price",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "e5876666-09fd-4db8-bc88-6aeeca0d5cc8",
+       "rows": [
+        [
+         "0",
+         "1",
+         "1",
+         "Chips and Fresh Tomato Salsa",
+         null,
+         "$2.39 "
+        ],
+        [
+         "1",
+         "1",
+         "1",
+         "Izze",
+         "[Clementine]",
+         "$3.39 "
+        ],
+        [
+         "2",
+         "1",
+         "1",
+         "Nantucket Nectar",
+         "[Apple]",
+         "$3.39 "
+        ],
+        [
+         "3",
+         "1",
+         "1",
+         "Chips and Tomatillo-Green Chili Salsa",
+         null,
+         "$2.39 "
+        ],
+        [
+         "4",
+         "2",
+         "2",
+         "Chicken Bowl",
+         "[Tomatillo-Red Chili Salsa (Hot), [Black Beans, Rice, Cheese, Sour Cream]]",
+         "$16.98 "
+        ],
+        [
+         "5",
+         "3",
+         "1",
+         "Chicken Bowl",
+         "[Fresh Tomato Salsa (Mild), [Rice, Cheese, Sour Cream, Guacamole, Lettuce]]",
+         "$10.98 "
+        ],
+        [
+         "6",
+         "3",
+         "1",
+         "Side of Chips",
+         null,
+         "$1.69 "
+        ],
+        [
+         "7",
+         "4",
+         "1",
+         "Steak Burrito",
+         "[Tomatillo Red Chili Salsa, [Fajita Vegetables, Black Beans, Pinto Beans, Cheese, Sour Cream, Guacamole, Lettuce]]",
+         "$11.75 "
+        ],
+        [
+         "8",
+         "4",
+         "1",
+         "Steak Soft Tacos",
+         "[Tomatillo Green Chili Salsa, [Pinto Beans, Cheese, Sour Cream, Lettuce]]",
+         "$9.25 "
+        ],
+        [
+         "9",
+         "5",
+         "1",
+         "Steak Burrito",
+         "[Fresh Tomato Salsa, [Rice, Black Beans, Pinto Beans, Cheese, Sour Cream, Lettuce]]",
+         "$9.25 "
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 10
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -194,7 +315,7 @@
        "9  [Fresh Tomato Salsa, [Rice, Black Beans, Pinto...     $9.25   "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1869,7 +1990,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
