--- a/Module 1 - Python/Python_Summary - For Class.ipynb
+++ b/Module 1 - Python/Python_Summary - For Class.ipynb
@@ -1710,7 +1710,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
